force-app/main/default/objects/Account_Sales_Team__c/Account_Sales_Team__c.object-meta.xml
<CustomObject>
    <label>Account Sales Team</label>
    <nameField>
        <displayFormat>AST-{00000000}</displayFormat>
        <label>Account Sales Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sales Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>