force-app/main/default/objects/Account_Sales_Team__c/fields/Account_Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Seller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Sales_Team</relationshipName>
    <type>Lookup</type>
</CustomField>