force-app/main/default/objects/Account_Sales_Team__c/fields/Seller_Role__c.field-meta.xml
<CustomField>
    <fullName>Seller_Role__c</fullName>
    <label>Seller Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Team_Roles</valueSetName>
    </valueSet>
</CustomField>